--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
   <header>
     <img src="">
-    <h1>Jeff's Blog</h1>
+    <h1>harika's Blog</h1>
     <ul>
       <li><a href="#">About Me</a></li>
       <li><a href="#">Best Poems</a></li>
